// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createLauncherBinary creates launcher binary on "darwin" 1`] = `
[
  [
    "directory/name",
    "cliPath directory/launcher "$@"",
  ],
]
`;

exports[`createLauncherBinary creates launcher binary on "linux" 1`] = `
[
  [
    "directory/name",
    "cliPath directory/launcher "$@"",
  ],
]
`;

exports[`createLauncherBinary creates launcher binary on win32 and version "7.8.5" 1`] = `
[
  [
    "directory/name.bat",
    "directory/lib/py2-windows-x86_64/python.exe directory/renpy.py directory/launcher %*",
  ],
]
`;

exports[`createLauncherBinary creates launcher binary on win32 and version "8.2.3" 1`] = `
[
  [
    "directory/name.bat",
    "directory/lib/py3-windows-x86_64/python.exe directory/renpy.py directory/launcher %*",
  ],
]
`;

exports[`getBinaryDirectory returns CLI directory for arch "arm" 1`] = `"directory/renpy-8.2.1-sdkarm"`;

exports[`getBinaryDirectory returns CLI directory for arch "x64" 1`] = `"directory/renpy-8.2.1-sdk"`;

exports[`getBinaryPath returns CLI path 1`] = `"directory/name.sh"`;

exports[`getDownloadObject when arch is "arm" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdkarm.tar.bz2",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when arch is "x64" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdk.zip",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getLauncherDirectory returns launcher directory 1`] = `"directory/launcher"`;
